stylesheet.css
/* Restore Session Dialog */
.restore-session-dialog {
    width: 30em;
}
  

/**
* *-tooltip: Adapted from: https://github.com/GSConnect/gnome-shell-extension-gsconnect/blob/master/src/stylesheet.css
*/
.yawsm-tooltip {
    border-radius: 3px;
    min-width: 0;
    min-height: 0;
    padding: 6px;
}

.yawsm-tooltip > StBoxLayout {
    spacing: 6px;
}

.yawsm-tooltip StIcon {
    icon-size: 16px;
}

.yawsm-tooltip StLabel {
    font-weight: normal;
    text-align: left;
}

.yawsm-tooltip StLabel:rtl {
    text-align: right;
}



.session-menu-section {
    max-height:600px;
}

.confirm-before-operate {
    color: #F00; 
    font-weight: bold; 
    font-style: italic
}

.confirm-before-operate:hover, .confirm-before-operate:focus {
    background-color: rgba(255,255,255,0.2);
    border: none;
    padding: 5px;
}

.button-item > StIcon {
    icon-size: 14px;
}

.aws-item-separator {
    border-radius: 32px;
    padding: 4px;
    /* 
    Remove cycle / border in the background in case everyone think this separator is a clickable button, actually it's just a view-only separator.

    https://developer.mozilla.org/en-US/docs/Web/CSS/border 
    */
    border: none;
}

.aws-item-separator > StIcon {
    icon-size: 14px;
}

/**
Add highlight effect when hover over the buttons in the item

Based on https://gitlab.com/bartl/todo-txt-gnome-shell-extension/-/blob/master/stylesheet.css
*/
.aws-item-button {
    border-radius: 32px;
    padding: 4px;
    border: 1px solid #282c2c;
}

.aws-item-button:hover, .aws-item-button:focus {
    background-color: rgba(255,255,255,0.2);
    border: none;
    padding: 5px;
}

.aws-item-button > StIcon {
    icon-size: 14px;
}

.search-preferences-button {
    border: none;
    padding: 0;
    margin-left: 10px;
    border-radius: 0;
    background-color: transparent;
    box-shadow: none;
}

.search-preferences-button > StIcon {
    icon-size: 18px;
}

.search-preferences-button:hover,
.search-preferences-button:focus {
    background-color: transparent;
    box-shadow: none;
}

